@@ -843,9 +843,13 @@
     var timedelta_tests = [
         [null, ''],
         [Sao.TimeDelta(3, 0, 0, 30, 5), '3d 05:30'],
-        [Sao.TimeDelta(0, 0, 0, 0, 0, 48), '12M'],
-        [Sao.TimeDelta(0, 0, 0, 0, 0, 50), '12M 2w'],
+        [Sao.TimeDelta(0, 0, 0, 0, 0, 48), '11M 6d'],
+        [Sao.TimeDelta(0, 0, 0, 0, 0, 50), '11M 2w 6d'],
+        [Sao.TimeDelta(0, 0, 0, 0, 0, 52), '12M 4d'],
+        [Sao.TimeDelta(360), '12M'],
+        [Sao.TimeDelta(364), '12M 4d'],
         [Sao.TimeDelta(365), '1Y'],
+        [Sao.TimeDelta(366), '1Y 1d'],
         [Sao.TimeDelta(0, 10, 0, 5, 2), '02:05:10'],
         [Sao.TimeDelta(0, 0, 42, 15), '00:15:00.042000'],
         [Sao.TimeDelta(1, 0, 42), '1d .042000'],
